--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-pymongo~=3.10.1
-Werkzeug~=1.0.0
-Flask~=1.1.1
-dnspython
-flask_login
-Gunicorn
+pymongo==3.10.1
+bcrypt==3.1.7
+dnspython==1.16.0
+Flask==1.1.1
+Flask-Bcrypt==0.7.1
+Flask-Login==0.5.0
+gunicorn==20.0.4
+Jinja2==2.11.1
+python-http-client==3.2.7
+Werkzeug==1.0.1
