--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pymongo==3.10.1
+Flask-PyMongo==2.3.0
 bcrypt==3.1.7
 dnspython==1.16.0
 Flask==1.1.1
@@ -8,3 +8,5 @@ gunicorn==20.0.4
 Jinja2==2.11.1
 python-http-client==3.2.7
 Werkzeug==1.0.1
+urllib3==1.25.8
+black==19.10b0
